JDK 12 for string literals.